2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFDictionary/bridge.m,
	* Source/CFDictionary.c,
	* Source/NSCFDictionary.m: TFB for CFDictionary
	* Source/NSCFData.m: fixing the _cfGetTypeID call
	* Source/NSCFError.m: fixing the _cfGetTypeID call


2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFType.m: leave hash calculation to NS classes,
	so that they match when compaing NS and CF objects
	* Tests/CFLocale/bridge.m
	* Source/NSCFLocale.m,
	* Source/CFLocale.c: TFB for CFLocale

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFString.m,
	* Tests/CFString/objc_bridge.m,
	* Tests/CFString/objc_bridge_from_cf.m,
	* Source/CFString.c: Improved TFB for CFString

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFSet.c,
	* Source/NSCFSet.m,
	* Tests/CFSet/objc_bridge.m: Add CFSet bridging support
	* Source/GSPrivate.h: Add variable argument helper macros

2013-03-16 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.c,
	* Source/CFString.c,
	* Source/CFRunLoop.c: Remove compiler warnings
	* Source/CFURL.c: Remove compiler warnings and get tests to work.
	* Source/CFStringEncoding.c: Add missing code for UTF16.
	* Source/NSCFString.m: Comment out all methods where super class code
	is more complete.

2012-12-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added UTF-32 conversion. Added non-lossy
	ASCII conversion functions. Consolidated some frequently used
	constructs into macros for easy maintenance.
	* Source/CFString.c: Short-cut for converting UTF-16 to UTF-16.
	* Tests/CFString/encodings.m: Added another test.

2012-12-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Added local function to convert UTF-32
	to/from UTF-16 (unused at this time).
	* Source/CFString.c: Fix bugs related to changes to
	GSStringEncodingToUnicode().
	* Tests/CFString/encodings.m: Add test for some of the changes made
	to Unicode conversion.
